tests/fail/örüntü-tip-hatası.kip

(bu tam-sayıyla) dene,
  bu boşsa, 0,
  ilkin devama ekiyse, 1.
